MOOSE generated documentation [skip ci]

--- a/Documentation/Wrapper.Airbase.html
+++ b/Documentation/Wrapper.Airbase.html
@@ -2479,7 +2479,7 @@ is implemented in the AIRBASE class as <a href="##(AIRBASE).GetName">AIRBASE.Get
     <li>AIRBASE.Sinai.Tel_Nof</li>
     <li>AIRBASE.Sinai.Abu_Rudeis</li>
     <li>AIRBASE.Sinai.Inshas_Airbase</li>
-    <li>AIRBASE.Sinai.Ben-Gurion</li>
+    <li>AIRBASE.Sinai.Ben_Gurion</li>
     <li>AIRBASE.Sinai.Bir_Hasanah</li>
     <li>AIRBASE.Sinai.Cairo_West</li>
 </ul>
@@ -4591,7 +4591,7 @@ When Moose is loaded statically, (as one file), tracing is switched off by defau
     <li>AIRBASE.Sinai.Tel_Nof</li>
     <li>AIRBASE.Sinai.Abu_Rudeis</li>
     <li>AIRBASE.Sinai.Inshas_Airbase</li>
-    <li>AIRBASE.Sinai.Ben-Gurion</li>
+    <li>AIRBASE.Sinai.Ben_Gurion</li>
     <li>AIRBASE.Sinai.Bir_Hasanah</li>
     <li>AIRBASE.Sinai.Cairo_West</li>
 </ul>
@@ -7377,7 +7377,7 @@ Note that this DOES NOT remove the airbase from the list. It just makes it unres
     <li>AIRBASE.Sinai.Tel_Nof</li>
     <li>AIRBASE.Sinai.Abu_Rudeis</li>
     <li>AIRBASE.Sinai.Inshas_Airbase</li>
-    <li>AIRBASE.Sinai.Ben-Gurion</li>
+    <li>AIRBASE.Sinai.Ben_Gurion</li>
     <li>AIRBASE.Sinai.Bir_Hasanah</li>
     <li>AIRBASE.Sinai.Cairo_West</li>
 </ul>
@@ -11873,7 +11873,7 @@ Coordinates are dependent on the position of the maps origin.</p>
     <li>AIRBASE.Sinai.Tel_Nof</li>
     <li>AIRBASE.Sinai.Abu_Rudeis</li>
     <li>AIRBASE.Sinai.Inshas_Airbase</li>
-    <li>AIRBASE.Sinai.Ben-Gurion</li>
+    <li>AIRBASE.Sinai.Ben_Gurion</li>
     <li>AIRBASE.Sinai.Bir_Hasanah</li>
     <li>AIRBASE.Sinai.Cairo_West</li>
 </ul>
@@ -12978,7 +12978,7 @@ If the Identifiable is alive, true is returned.  </p>
     <li>AIRBASE.Sinai.Tel_Nof</li>
     <li>AIRBASE.Sinai.Abu_Rudeis</li>
     <li>AIRBASE.Sinai.Inshas_Airbase</li>
-    <li>AIRBASE.Sinai.Ben-Gurion</li>
+    <li>AIRBASE.Sinai.Ben_Gurion</li>
     <li>AIRBASE.Sinai.Bir_Hasanah</li>
     <li>AIRBASE.Sinai.Cairo_West</li>
 </ul>
@@ -13718,7 +13718,7 @@ If the Identifiable is alive, true is returned.  </p>
     <li>AIRBASE.Sinai.Tel_Nof</li>
     <li>AIRBASE.Sinai.Abu_Rudeis</li>
     <li>AIRBASE.Sinai.Inshas_Airbase</li>
-    <li>AIRBASE.Sinai.Ben-Gurion</li>
+    <li>AIRBASE.Sinai.Ben_Gurion</li>
     <li>AIRBASE.Sinai.Bir_Hasanah</li>
     <li>AIRBASE.Sinai.Cairo_West</li>
 </ul>
