--- a/Documentation/Ops.OpsGroup.html
+++ b/Documentation/Ops.OpsGroup.html
@@ -38301,7 +38301,7 @@ When moose is loading dynamically (for moose class development), tracing is swit
 
 
     
-<p> No of sight.</p>
+<p> Has line of sight.</p>
 
 </div>
 
