--- a/Documentation/Wrapper.Net.html
+++ b/Documentation/Wrapper.Net.html
@@ -3152,6 +3152,12 @@ When Moose is loaded statically, (as one file), tracing is switched off by defau
 </td>
           </tr>
           <tr class="w3-border">
+            <td class="name w3-half w3-container" style="word-wrap: break-word"><p><a href="##(NET.PlayerData).timestamp">NET.PlayerData.timestamp</a></p></td>
+            <td class="summary w3-half w3-container" style="word-wrap: break-word">
+
+</td>
+          </tr>
+          <tr class="w3-border">
             <td class="name w3-half w3-container" style="word-wrap: break-word"><p><a href="##(NET.PlayerData).ucid">NET.PlayerData.ucid</a></p></td>
             <td class="summary w3-half w3-container" style="word-wrap: break-word">
 
@@ -11263,6 +11269,17 @@ When moose is loading dynamically (for moose class development), tracing is swit
 
     #number
 <a id="#(NET.PlayerData).slot" ><strong>NET.PlayerData.slot</strong></a>
+    
+
+
+</div>
+
+</div>   
+<div>   
+        <div class="w3-card-2 w3-padding-small w3-margin-top">
+
+    <a href="##(numner)">#numner</a>
+<a id="#(NET.PlayerData).timestamp" ><strong>NET.PlayerData.timestamp</strong></a>
     
 
 
