--- a/Documentation/Wrapper.Airbase.html
+++ b/Documentation/Wrapper.Airbase.html
@@ -2519,7 +2519,7 @@ is implemented in the AIRBASE class as <a href="##(AIRBASE).GetName">AIRBASE.Get
     <li>AIRBASE.Syria.Al_Dumayr</li>
     <li>AIRBASE.Syria.Gazipasa</li>
     <li>AIRBASE.Syria.Hatay</li>
-    <li>AIRBASE.Syria.Nicosia</li>
+    <li>AIRBASE.Syria.Nicosia [Deactivated by ED as of June/2023]</li>
     <li>AIRBASE.Syria.Pinarbashi</li>
     <li>AIRBASE.Syria.Paphos</li>
     <li>AIRBASE.Syria.Kingsfield</li>
@@ -4652,7 +4652,7 @@ When Moose is loaded statically, (as one file), tracing is switched off by defau
     <li>AIRBASE.Syria.Al_Dumayr</li>
     <li>AIRBASE.Syria.Gazipasa</li>
     <li>AIRBASE.Syria.Hatay</li>
-    <li>AIRBASE.Syria.Nicosia</li>
+    <li>AIRBASE.Syria.Nicosia [Deactivated by ED as of June/2023]</li>
     <li>AIRBASE.Syria.Pinarbashi</li>
     <li>AIRBASE.Syria.Paphos</li>
     <li>AIRBASE.Syria.Kingsfield</li>
@@ -7438,7 +7438,7 @@ Note that this DOES NOT remove the airbase from the list. It just makes it unres
     <li>AIRBASE.Syria.Al_Dumayr</li>
     <li>AIRBASE.Syria.Gazipasa</li>
     <li>AIRBASE.Syria.Hatay</li>
-    <li>AIRBASE.Syria.Nicosia</li>
+    <li>AIRBASE.Syria.Nicosia [Deactivated by ED as of June/2023]</li>
     <li>AIRBASE.Syria.Pinarbashi</li>
     <li>AIRBASE.Syria.Paphos</li>
     <li>AIRBASE.Syria.Kingsfield</li>
@@ -12007,7 +12007,7 @@ Coordinates are dependent on the position of the maps origin.</p>
     <li>AIRBASE.Syria.Al_Dumayr</li>
     <li>AIRBASE.Syria.Gazipasa</li>
     <li>AIRBASE.Syria.Hatay</li>
-    <li>AIRBASE.Syria.Nicosia</li>
+    <li>AIRBASE.Syria.Nicosia [Deactivated by ED as of June/2023]</li>
     <li>AIRBASE.Syria.Pinarbashi</li>
     <li>AIRBASE.Syria.Paphos</li>
     <li>AIRBASE.Syria.Kingsfield</li>
@@ -13112,7 +13112,7 @@ If the Identifiable is alive, true is returned.  </p>
     <li>AIRBASE.Syria.Al_Dumayr</li>
     <li>AIRBASE.Syria.Gazipasa</li>
     <li>AIRBASE.Syria.Hatay</li>
-    <li>AIRBASE.Syria.Nicosia</li>
+    <li>AIRBASE.Syria.Nicosia [Deactivated by ED as of June/2023]</li>
     <li>AIRBASE.Syria.Pinarbashi</li>
     <li>AIRBASE.Syria.Paphos</li>
     <li>AIRBASE.Syria.Kingsfield</li>
@@ -13852,7 +13852,7 @@ If the Identifiable is alive, true is returned.  </p>
     <li>AIRBASE.Syria.Al_Dumayr</li>
     <li>AIRBASE.Syria.Gazipasa</li>
     <li>AIRBASE.Syria.Hatay</li>
-    <li>AIRBASE.Syria.Nicosia</li>
+    <li>AIRBASE.Syria.Nicosia [Deactivated by ED as of June/2023]</li>
     <li>AIRBASE.Syria.Pinarbashi</li>
     <li>AIRBASE.Syria.Paphos</li>
     <li>AIRBASE.Syria.Kingsfield</li>
