MOOSE generated documentation [skip ci]

--- a/Documentation/Wrapper.Airbase.html
+++ b/Documentation/Wrapper.Airbase.html
@@ -3001,6 +3001,9 @@ is implemented in the AIRBASE class as <a href="##(AIRBASE).GetName">AIRBASE.Get
     
 
 
+    
+<p> Set airbase name.</p>
+
 </div>
 
 </div>   
