MOOSE generated documentation [skip ci]

--- a/Documentation/Core.ClientMenu.html
+++ b/Documentation/Core.ClientMenu.html
@@ -8109,7 +8109,7 @@ When moose is loading dynamically (for moose class development), tracing is swit
           </div>
           <div class="w3-half">
               
-<p>(optional) If given, make this change only for this client. In this case the generic structure will not be touched.</p>
+<p>(optional) If given, make this change only for this client. </p>
 
           </div>
         </div>
