MOOSE generated documentation [skip ci]

--- a/Documentation/Ops.AWACS.html
+++ b/Documentation/Ops.AWACS.html
@@ -3490,6 +3490,12 @@ To add a localization, the following texts need to be translated and set in your
 </td>
           </tr>
           <tr class="w3-border">
+            <td class="name w3-half w3-container" style="word-wrap: break-word"><p><a href="##(AWACS)._CheckSubscribers">AWACS:_CheckSubscribers()</a></p></td>
+            <td class="summary w3-half w3-container" style="word-wrap: break-word">
+<p>[Internal] _CheckSubscribers</p>
+</td>
+          </tr>
+          <tr class="w3-border">
             <td class="name w3-half w3-container" style="word-wrap: break-word"><p><a href="##(AWACS)._CheckTaskQueue">AWACS:_CheckTaskQueue()</a></p></td>
             <td class="summary w3-half w3-container" style="word-wrap: break-word">
 <p>[Internal] Check available tasks and status</p>
@@ -10309,6 +10315,36 @@ Note that this must be installed on your windows system. Can also be Google voic
 
           </div>
         </div>
+    <h2><strong>Return value:</strong></h2>
+    <div class="w3-row w3-border-bottom w3-margin-left">
+      <div class="w3-half">
+        <p><a href="##(AWACS)">#AWACS</a>:</p>
+      </div>
+      <div class="w3-half">
+        
+<p>self</p>
+
+      </div>
+    </div>
+</div>
+
+</div>
+</div>
+
+        <div class="w3-card-2 w3-padding-small w3-margin-top">
+
+<div class="w3-theme-l2">
+<h2><a id="#(AWACS)._CheckSubscribers" ><strong>AWACS:_CheckSubscribers()</strong></a></h2>
+</div>
+    
+<p>[Internal] _CheckSubscribers</p>
+
+<div id= "#Functions##_CheckSubscribers" class="w3-show w3-white">
+  <div class="w3-container w3-white" id="functiontype">
+   <h2><strong>Defined in:</strong></h2>
+   <div class="w3-margin-left">
+<p>AWACS</p>
+</div>
     <h2><strong>Return value:</strong></h2>
     <div class="w3-row w3-border-bottom w3-margin-left">
       <div class="w3-half">
