--- a/Documentation/Ops.Commander.html
+++ b/Documentation/Ops.Commander.html
@@ -2323,6 +2323,12 @@ end
 </td>
           </tr>
           <tr class="w3-border">
+            <td class="name w3-half w3-container" style="word-wrap: break-word"><p><a href="##(COMMANDER).RemoveGciCapZone">COMMANDER:RemoveGciCapZone(Zone)</a></p></td>
+            <td class="summary w3-half w3-container" style="word-wrap: break-word">
+<p>Remove a GCI CAP.</p>
+</td>
+          </tr>
+          <tr class="w3-border">
             <td class="name w3-half w3-container" style="word-wrap: break-word"><p><a href="##(COMMANDER).RemoveLegion">COMMANDER:RemoveLegion(Legion)</a></p></td>
             <td class="summary w3-half w3-container" style="word-wrap: break-word">
 <p>Remove a LEGION to the commander.</p>
@@ -6143,6 +6149,39 @@ Cohort assets will not be available until relocation is finished.</p>
 <p>Remove a AWACS zone.</p>
 
 <div id= "#Functions##RemoveAwacsZone" class="w3-show w3-white">
+  <div class="w3-container w3-white" id="functiontype">
+   <h2><strong>Defined in:</strong></h2>
+   <div class="w3-margin-left">
+<p>COMMANDER</p>
+</div>
+    <h2><strong>Parameter:</strong></h2>
+        <div class="w3-row w3-margin-left w3-border-bottom w3-border-l2">
+          <div class="w3-half">
+            <p>
+                <a href="Core.Zone.html##(ZONE)">Core.Zone#ZONE</a>
+            <strong><strong>Zone</strong></strong>
+            </p>
+          </div>
+          <div class="w3-half">
+              
+<p>Zone, where the flight orbits.</p>
+
+          </div>
+        </div>
+</div>
+
+</div>
+</div>
+
+        <div class="w3-card-2 w3-padding-small w3-margin-top">
+
+<div class="w3-theme-l2">
+<h2><a id="#(COMMANDER).RemoveGciCapZone" ><strong>COMMANDER:RemoveGciCapZone(Zone)</strong></a></h2>
+</div>
+    
+<p>Remove a GCI CAP.</p>
+
+<div id= "#Functions##RemoveGciCapZone" class="w3-show w3-white">
   <div class="w3-container w3-white" id="functiontype">
    <h2><strong>Defined in:</strong></h2>
    <div class="w3-margin-left">
