--- a/Documentation/Wrapper.Scenery.html
+++ b/Documentation/Wrapper.Scenery.html
@@ -2123,6 +2123,12 @@
 </td>
           </tr>
           <tr class="w3-border">
+            <td class="name w3-half w3-container" style="word-wrap: break-word"><p><a href="##(SCENERY).CargoBayCapacityValues">SCENERY.CargoBayCapacityValues</a></p></td>
+            <td class="summary w3-half w3-container" style="word-wrap: break-word">
+
+</td>
+          </tr>
+          <tr class="w3-border">
             <td class="name w3-half w3-container" style="word-wrap: break-word"><p><a href="##(SCENERY).CargoItemCount">SCENERY:CargoItemCount()</a></p></td>
             <td class="summary w3-half w3-container" style="word-wrap: break-word">
 <p>Get cargo item count.</p>
@@ -2132,6 +2138,12 @@
             <td class="name w3-half w3-container" style="word-wrap: break-word"><p><a href="##(SCENERY).ClearCargo">SCENERY:ClearCargo()</a></p></td>
             <td class="summary w3-half w3-container" style="word-wrap: break-word">
 <p>Clear all cargo.</p>
+</td>
+          </tr>
+          <tr class="w3-border">
+            <td class="name w3-half w3-container" style="word-wrap: break-word"><p><a href="##(SCENERY).DefaultInfantryWeight">SCENERY.DefaultInfantryWeight</a></p></td>
+            <td class="summary w3-half w3-container" style="word-wrap: break-word">
+
 </td>
           </tr>
           <tr class="w3-border">
