--- a/Documentation/Wrapper.Static.html
+++ b/Documentation/Wrapper.Static.html
@@ -2096,6 +2096,12 @@ If the DCS Static object does not exist or is nil, the STATIC methods will retur
 </td>
           </tr>
           <tr class="w3-border">
+            <td class="name w3-half w3-container" style="word-wrap: break-word"><p><a href="##(STATIC).CargoBayCapacityValues">STATIC.CargoBayCapacityValues</a></p></td>
+            <td class="summary w3-half w3-container" style="word-wrap: break-word">
+
+</td>
+          </tr>
+          <tr class="w3-border">
             <td class="name w3-half w3-container" style="word-wrap: break-word"><p><a href="##(STATIC).CargoItemCount">STATIC:CargoItemCount()</a></p></td>
             <td class="summary w3-half w3-container" style="word-wrap: break-word">
 <p>Get cargo item count.</p>
@@ -2105,6 +2111,12 @@ If the DCS Static object does not exist or is nil, the STATIC methods will retur
             <td class="name w3-half w3-container" style="word-wrap: break-word"><p><a href="##(STATIC).ClearCargo">STATIC:ClearCargo()</a></p></td>
             <td class="summary w3-half w3-container" style="word-wrap: break-word">
 <p>Clear all cargo.</p>
+</td>
+          </tr>
+          <tr class="w3-border">
+            <td class="name w3-half w3-container" style="word-wrap: break-word"><p><a href="##(STATIC).DefaultInfantryWeight">STATIC.DefaultInfantryWeight</a></p></td>
+            <td class="summary w3-half w3-container" style="word-wrap: break-word">
+
 </td>
           </tr>
           <tr class="w3-border">
