MOOSE generated documentation [skip ci]

--- a/Documentation/AI.AI_A2A_Dispatcher.html
+++ b/Documentation/AI.AI_A2A_Dispatcher.html
@@ -2113,6 +2113,11 @@ Per one, two, three, four?</p>
 
 <p><strong>The default grouping is 1. That means, that each spawned defender will act individually.</strong></p>
 
+<h1>Developer Note</h1>
+
+<p>Note while this class still works, it is no longer supported as the original author stopped active development of MOOSE
+Therefore, this class is considered to be deprecated</p>
+
 <hr/>
 
 <h3>Authors: <strong>FlightControl</strong> rework of GCICAP + introduction of new concepts (squadrons).</h3>
