--- a/Documentation/AI.AI_A2G_Dispatcher.html
+++ b/Documentation/AI.AI_A2G_Dispatcher.html
@@ -2192,6 +2192,11 @@ Per one, two, three, four?</p>
 <p><strong>The default grouping is 1. That means, that each spawned defender will act individually.</strong>
 But you can specify a number between 1 and 4, so that the defenders will act as a group.</p>
 
+<h1>Developer Note</h1>
+
+<p>Note while this class still works, it is no longer supported as the original author stopped active development of MOOSE
+Therefore, this class is considered to be deprecated</p>
+
 <hr/>
 
 <h3>Author: <strong>FlightControl</strong> rework of GCICAP + introduction of new concepts (squadrons).</h3>
