--- a/Documentation/AI.AI_Cargo.html
+++ b/Documentation/AI.AI_Cargo.html
@@ -1963,9 +1963,14 @@ Please consult the <a href="Cargo.Cargo.html">Cargo.Cargo</a> module for more in
 <ul>
     <li><a href="AI.AI_Cargo_APC.html">AI.AI_Cargo_APC</a> - Cargo transportation using APCs and other vehicles between zones.</li>
     <li><a href="AI.AI_Cargo_Helicopter.html">AI.AI_Cargo_Helicopter</a> - Cargo transportation using helicopters between zones.</li>
-    <li><a href="AI.AI_Cargo_Airplane.html">AI.AI_Cargo_Airplane</a> - Cargo transportation using airplanes to and from airbases.
-    </li>
+    <li><a href="AI.AI_Cargo_Airplane.html">AI.AI_Cargo_Airplane</a> - Cargo transportation using airplanes to and from airbases.</li>
 </ul>
+
+<h1>Developer Note</h1>
+
+<p>Note while this class still works, it is no longer supported as the original author stopped active development of MOOSE
+Therefore, this class is considered to be deprecated</p>
+
 
 </div>
 
