--- a/Documentation/Cargo.CargoSlingload.html
+++ b/Documentation/Cargo.CargoSlingload.html
@@ -1968,6 +1968,11 @@
     <li><a href="Tasking.Task_Cargo_Transport.html##(TASK_CARGO_CSAR)">Tasking.Task_Cargo_Transport#TASK_CARGO_CSAR</a> to transport downed pilots by human players.</li>
 </ul>
 
+<h1>Developer Note</h1>
+
+<p>Note while this class still works, it is no longer supported as the original author stopped active development of MOOSE
+Therefore, this class is considered to be deprecated</p>
+
 <hr/>
 
 
