--- a/Documentation/Cargo.CargoUnit.html
+++ b/Documentation/Cargo.CargoUnit.html
@@ -1964,6 +1964,11 @@ Note that ground forces behave in a group, and thus, act in formation, regardles
 
 <p>This class is used in CARGO_GROUP, and is not meant to be used by mission designers individually.</p>
 
+<h1>Developer Note</h1>
+
+<p>Note while this class still works, it is no longer supported as the original author stopped active development of MOOSE
+Therefore, this class is considered to be deprecated</p>
+
 <hr/>
 
 
