--- a/Documentation/Tasking.Task_Capture_Dispatcher.html
+++ b/Documentation/Tasking.Task_Capture_Dispatcher.html
@@ -1980,6 +1980,11 @@ players capture zones in a co-operation effort. </p>
     <li>Various other options.</li>
 </ul>
 
+<h1>Developer Note</h1>
+
+<p>Note while this class still works, it is no longer supported as the original author stopped active development of MOOSE
+Therefore, this class is considered to be deprecated</p>
+
 <hr/>
 
 <h3>Author: <strong>FlightControl</strong></h3>
