MOOSE generated documentation [skip ci]

--- a/Documentation/Ops.Airwing.html
+++ b/Documentation/Ops.Airwing.html
@@ -2814,6 +2814,12 @@ started.</p>
 </td>
           </tr>
           <tr class="w3-border">
+            <td class="name w3-half w3-container" style="word-wrap: break-word"><p><a href="##(AIRWING).RandomAssetScore">AIRWING.RandomAssetScore</a></p></td>
+            <td class="summary w3-half w3-container" style="word-wrap: break-word">
+<p>Random score that is added to the asset score in the selection process.</p>
+</td>
+          </tr>
+          <tr class="w3-border">
             <td class="name w3-half w3-container" style="word-wrap: break-word"><p><a href="##(AIRWING).RecruitAssetsForEscort">AIRWING:RecruitAssetsForEscort(Mission, Assets)</a></p></td>
             <td class="summary w3-half w3-container" style="word-wrap: break-word">
 <p>Recruit assets performing an escort mission for a given asset.</p>
