--- a/Documentation/Ops.Brigade.html
+++ b/Documentation/Ops.Brigade.html
@@ -2441,6 +2441,12 @@
 </td>
           </tr>
           <tr class="w3-border">
+            <td class="name w3-half w3-container" style="word-wrap: break-word"><p><a href="##(BRIGADE).RandomAssetScore">BRIGADE.RandomAssetScore</a></p></td>
+            <td class="summary w3-half w3-container" style="word-wrap: break-word">
+<p>Random score that is added to the asset score in the selection process.</p>
+</td>
+          </tr>
+          <tr class="w3-border">
             <td class="name w3-half w3-container" style="word-wrap: break-word"><p><a href="##(BRIGADE).RecruitAssetsForEscort">BRIGADE:RecruitAssetsForEscort(Mission, Assets)</a></p></td>
             <td class="summary w3-half w3-container" style="word-wrap: break-word">
 <p>Recruit assets performing an escort mission for a given asset.</p>
