--- a/Documentation/Ops.Fleet.html
+++ b/Documentation/Ops.Fleet.html
@@ -2445,6 +2445,12 @@ myFleet:AddFlotilla(FlotillaPerry)
 </td>
           </tr>
           <tr class="w3-border">
+            <td class="name w3-half w3-container" style="word-wrap: break-word"><p><a href="##(FLEET).RandomAssetScore">FLEET.RandomAssetScore</a></p></td>
+            <td class="summary w3-half w3-container" style="word-wrap: break-word">
+<p>Random score that is added to the asset score in the selection process.</p>
+</td>
+          </tr>
+          <tr class="w3-border">
             <td class="name w3-half w3-container" style="word-wrap: break-word"><p><a href="##(FLEET).RecruitAssetsForEscort">FLEET:RecruitAssetsForEscort(Mission, Assets)</a></p></td>
             <td class="summary w3-half w3-container" style="word-wrap: break-word">
 <p>Recruit assets performing an escort mission for a given asset.</p>
