MOOSE generated documentation [skip ci]

--- a/Documentation/Ops.EasyGCICAP.html
+++ b/Documentation/Ops.EasyGCICAP.html
@@ -2106,6 +2106,12 @@ Put an EW radar system on the map and name it aptly, like "Blue EWR".</p>
     <li><a href="##(EASYGCICAP).SetTankerAndAWACSInvisible">EASYGCICAP.SetTankerAndAWACSInvisible</a>: Set Tanker and AWACS to be invisible to enemy AI eyes. Is set to <code>true</code> by default.</li>
 </ul>
 
+<h2>Debug and Monitor</h2>
+
+<pre><code>     mywing.debug = true -- log information
+     mywing.Monitor = true -- show some statistics on screen
+</code></pre>
+
 
 
 </div>
