--- a/Documentation/Ops.Auftrag.html
+++ b/Documentation/Ops.Auftrag.html
@@ -2924,7 +2924,7 @@ The commander will select the best assets available from all the legions under h
           <tr class="w3-border">
             <td class="name w3-half w3-container" style="word-wrap: break-word"><p><a href="##(AUFTRAG).NewCAPGROUP">AUFTRAG:NewCAPGROUP(Grp, Altitude, Speed, RelHeading, Leg, OffsetDist, OffsetAngle, UpdateDistance, TargetTypes, EngageRange)</a></p></td>
             <td class="summary w3-half w3-container" style="word-wrap: break-word">
-<p><strong>[AIR]</strong> Create a CAP mission on a group.</p>
+<p><strong>[AIR]</strong> Create a CAP mission over a (moving) group.</p>
 </td>
           </tr>
           <tr class="w3-border">
@@ -12665,7 +12665,7 @@ This determines the payload and the DCS mission task which are used when the air
 <h2><a id="#(AUFTRAG).NewCAPGROUP" ><strong>AUFTRAG:NewCAPGROUP(Grp, Altitude, Speed, RelHeading, Leg, OffsetDist, OffsetAngle, UpdateDistance, TargetTypes, EngageRange)</strong></a></h2>
 </div>
     
-<p><strong>[AIR]</strong> Create a CAP mission on a group.</p>
+<p><strong>[AIR]</strong> Create a CAP mission over a (moving) group.</p>
 
 <div id= "#Functions##NewCAPGROUP" class="w3-show w3-white">
   <div class="w3-container w3-white" id="functiontype">
@@ -12682,7 +12682,9 @@ This determines the payload and the DCS mission task which are used when the air
             </p>
           </div>
           <div class="w3-half">
-              <p></p>
+              
+<p>The grp to perform the CAP over.</p>
+
           </div>
         </div>
         <div class="w3-row w3-margin-left w3-border-bottom w3-border-l2">
