--- a/Documentation/Ops.OpsGroup.html
+++ b/Documentation/Ops.OpsGroup.html
@@ -39010,7 +39010,7 @@ When moose is loading dynamically (for moose class development), tracing is swit
 
 
     
-<p> Has line of sight.</p>
+<p> No of sight.</p>
 
 </div>
 
