MOOSE generated documentation [skip ci]

--- a/Documentation/Core.Message.html
+++ b/Documentation/Core.Message.html
@@ -3190,7 +3190,7 @@ The message display times are automatically defined based on the timing settings
         <div class="w3-row w3-margin-left w3-border-bottom w3-border-l2">
           <div class="w3-half">
             <p>
-                <a href="##(strimg)">#strimg</a>
+                #string
             <strong><strong>Culture</strong></strong>
             </p>
           </div>
@@ -3270,7 +3270,7 @@ The message display times are automatically defined based on the timing settings
          -- Needed once only
          MESSAGE.SetMSRS("D:\\Program Files\\DCS-SimpleRadio-Standalone",5012,nil,127,radio.modulation.FM,"female","en-US",nil,coalition.side.BLUE)
          -- later on in your code
-         MESSAGE:New("Test message!",15,"SPAWN"):ToAll():ToSRS()
+         MESSAGE:New("Test message!",15,"SPAWN"):ToSRS()
          </code></pre>
 
 </div>
@@ -3971,7 +3971,7 @@ The message display times are automatically defined based on the timing settings
         <div class="w3-row w3-margin-left w3-border-bottom w3-border-l2">
           <div class="w3-half">
             <p>
-                <a href="##(strimg)">#strimg</a>
+                #string
             <strong><strong>culture</strong></strong>
             </p>
           </div>
@@ -4044,6 +4044,14 @@ The message display times are automatically defined based on the timing settings
 
       </div>
     </div>
+      <h2><strong>Usage:</strong></h2>
+    <pre class="example"><code>         -- Mind the dot here, not using the colon this time around!
+         -- Needed once only
+         MESSAGE.SetMSRS("D:\\Program Files\\DCS-SimpleRadio-Standalone",5012,nil,127,radio.modulation.FM,"female","en-US",nil,coalition.side.BLUE)
+         -- later on in your code
+         MESSAGE:New("Test message!",15,"SPAWN"):ToSRS()
+         </code></pre>
+
 </div>
 
 </div>
@@ -4106,7 +4114,7 @@ The message display times are automatically defined based on the timing settings
         <div class="w3-row w3-margin-left w3-border-bottom w3-border-l2">
           <div class="w3-half">
             <p>
-                <a href="##(strimg)">#strimg</a>
+                #string
             <strong><strong>culture</strong></strong>
             </p>
           </div>
@@ -4166,6 +4174,14 @@ The message display times are automatically defined based on the timing settings
 
       </div>
     </div>
+      <h2><strong>Usage:</strong></h2>
+    <pre class="example"><code>         -- Mind the dot here, not using the colon this time around!
+         -- Needed once only
+         MESSAGE.SetMSRS("D:\\Program Files\\DCS-SimpleRadio-Standalone",5012,nil,127,radio.modulation.FM,"female","en-US",nil,coalition.side.NEUTRAL)
+         -- later on in your code
+         MESSAGE:New("Test message!",15,"SPAWN"):ToSRSAll()
+         </code></pre>
+
 </div>
 
 </div>
@@ -4228,7 +4244,7 @@ The message display times are automatically defined based on the timing settings
         <div class="w3-row w3-margin-left w3-border-bottom w3-border-l2">
           <div class="w3-half">
             <p>
-                <a href="##(strimg)">#strimg</a>
+                #string
             <strong><strong>culture</strong></strong>
             </p>
           </div>
@@ -4288,6 +4304,14 @@ The message display times are automatically defined based on the timing settings
 
       </div>
     </div>
+      <h2><strong>Usage:</strong></h2>
+    <pre class="example"><code>         -- Mind the dot here, not using the colon this time around!
+         -- Needed once only
+         MESSAGE.SetMSRS("D:\\Program Files\\DCS-SimpleRadio-Standalone",5012,nil,127,radio.modulation.FM,"female","en-US",nil,coalition.side.BLUE)
+         -- later on in your code
+         MESSAGE:New("Test message!",15,"SPAWN"):ToSRSBlue()
+         </code></pre>
+
 </div>
 
 </div>
@@ -4350,7 +4374,7 @@ The message display times are automatically defined based on the timing settings
         <div class="w3-row w3-margin-left w3-border-bottom w3-border-l2">
           <div class="w3-half">
             <p>
-                <a href="##(strimg)">#strimg</a>
+                #string
             <strong><strong>culture</strong></strong>
             </p>
           </div>
@@ -4410,6 +4434,14 @@ The message display times are automatically defined based on the timing settings
 
       </div>
     </div>
+      <h2><strong>Usage:</strong></h2>
+    <pre class="example"><code>         -- Mind the dot here, not using the colon this time around!
+         -- Needed once only
+         MESSAGE.SetMSRS("D:\\Program Files\\DCS-SimpleRadio-Standalone",5012,nil,127,radio.modulation.FM,"female","en-US",nil,coalition.side.RED)
+         -- later on in your code
+         MESSAGE:New("Test message!",15,"SPAWN"):ToSRSRed()
+         </code></pre>
+
 </div>
 
 </div>
